added feed hover

--- a/app/assets/javascripts/backbone/templates/events/calendar_popover.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/calendar_popover.jst.ejs
@@ -1,22 +1,24 @@
-<div class='event-popover-title'>
+<div class='event-popover-head'>
   <strong><%= e.get("name") %></strong>
   <span class="close">×</span>
 </div>
-<p>By <%= e.get("organization") %></p>
-<% startAt = moment(e.get("start_at")); %>
-<% endAt = moment(e.get("end_at")); %>
-<% if(startAt.format("YYYY-MM-DD") == endAt.format("YYYY-MM-DD")) { %>
-  <p> 
-    <%= startAt.format("dddd, MMMM DD hh:mm a") %> -
-    <%= endAt.format("hh:mm a") %>
-  </p>
-<% } else { %>
-  <p> 
-    <%= startAt.format("dddd, MMMM DD hh:mm a") %>-
-    <%= endAt.format("dddd, MMMM DD hh:mm a") %>
-  </p>
-<% } %>
-<p>At: <%= e.get("location") %></p>
-<p>Description: <%= e.get("description") %></p>
-<p>Address: <%= e.get("address") %></p>
-<div class="map-container">Google map goes here</div>
+<div class="event-popover-body">
+  <p>By <%= e.get("organization") %></p>
+  <% startAt = moment(e.get("start_at")); %>
+  <% endAt = moment(e.get("end_at")); %>
+  <% if(startAt.format("YYYY-MM-DD") == endAt.format("YYYY-MM-DD")) { %>
+    <p> 
+      <%= startAt.format("dddd, MMMM DD hh:mm a") %> -
+      <%= endAt.format("hh:mm a") %>
+    </p>
+  <% } else { %>
+    <p> 
+      <%= startAt.format("dddd, MMMM DD hh:mm a") %>-
+      <%= endAt.format("dddd, MMMM DD hh:mm a") %>
+    </p>
+  <% } %>
+  <p>At: <%= e.get("location") %></p>
+  <p>Description: <%= e.get("description") %></p>
+  <p>Address: <%= e.get("address") %></p>
+  <div class="map-container">Google map goes here</div>
+</div>
