--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -1,16 +1,20 @@
-$popover-color: lightblue;
+$popover-head-color: lightblue;
+$popover-body-color: #eee;
 .popover {
   height: 300px;
   width: 300px;
   padding: 0;
   @include border-radius(0);
   &.left .arrow {
-    border-left-color: $popover-color;
+    border-left-color: $popover-body-color;
   }
 }
 .popover-inner {
   height: 100%;
-  background-color: $popover-color;
+  background-color: $popover-body-color;
+}
+.popover-content {
+  padding: 0;
 }
 .popover-title {
   display: none;
