left-container bug

--- a/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
@@ -1,4 +1,4 @@
-<div class="left">
+<div class="content-left">
   <div class='left-search'>
     <input placeholder="Search <%= type %>..."></input>
   </div>
