--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -5,6 +5,7 @@ $popover-body-color: #eee;
   width: 300px;
   padding: 0;
   @include border-radius(0);
+  z-index: 15;
   &.left .arrow {
     border-left-color: $popover-body-color;
   }
