--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -17,17 +17,24 @@ $cal_gap: 40px;
 }
 
 .cal-header {
-  height: 20px;
   position: fixed;
-  text-align: center;
-  font-size: 8px;
-  line-height: 20px;
-  @include linear-gradient(#fff, #efefef);
   z-index: 20;
   width: -moz-calc(100% - 500px);
   width: -webkit-calc(100% - 500px);
   width: -o-calc(100% - 500px);
   width: calc(100% - 500px);
+  background-color: white;
+  .cal-header-days {
+    text-align: center;
+    height: 20px;
+    width: 100%;
+    font-size: 8px;
+    line-height: 20px;
+    @include linear-gradient(#fff, #efefef);
+  }
+  .btn-toolbar {
+    padding: 0 10px;
+  }
   
 }
 .cal-body {
