--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -1,4 +1,10 @@
 /* ====== FEED ==== */
+.feed {
+  left: $sidebar_width;
+  width: $feed_width;
+  border-left: 1px solid #eee;
+  border-right: 1px solid #eee;
+}
 
 .feed-day-header {
   border-top: 1px solid #dadada;
@@ -44,5 +50,31 @@
     background-color: #f5f5f5;
   }
   @include transition(background-color 0.2s);
+}
+
+/* SIDEBAR */
+
+.sidebar {
+  left: 0;
+  width: $sidebar_width;
+  overflow-y: hidden;
+  background-color: #f8f8f8;
+}
+.sidebar-label {
+  font-size: 120%;
+  line-height: 120%;
+  padding: 10px;
+}
+
+.sidebar-item {
+  padding: 5px 0 5px 20px;
+  cursor: pointer;
+  @include transition(all 0.2s);
+  &:hover {
+    background-color: #eee;
+  }
+  &.hidden {
+    opacity: 0.5;
+  }
 }
 
