--- a/app/assets/javascripts/backbone/templates/events/calendar_week.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/calendar_week.jst.ejs
@@ -1,5 +1,5 @@
 <table class="cal-body">
-  <tr id="cal-day-container">
+  <tr class="cal-day-container">
     <td>
       <div class="hour hour-label"><span class="hour-num">12 a.m. </span></div>
       <% for(i=1; i<12; i++) { %>
