--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -10,10 +10,12 @@
   //overflow-y: hidden;
 }
 
-$hour_height: 44px;
+$week_hour_height: 44px;
 $cal_gap: 40px;
-
+$cal_head_height: 80px;
 .cal {
+  position:relative;
+  top: $cal_head_height;
   width: 100%;
   height: 100%;
 }
@@ -28,25 +30,28 @@ $cal_gap: 40px;
 
 .cal-header {
   position: fixed;
+  height: $cal_head_height;
   z-index: 20;
   width: -moz-calc(100% - 500px);
   width: -webkit-calc(100% - 500px);
   width: -o-calc(100% - 500px);
   width: calc(100% - 500px);
   background-color: white;
-  .cal-header-days {
-    text-align: center;
-    height: 20px;
-    width: 100%;
-    font-size: 8px;
-    line-height: 20px;
-    @include linear-gradient(#fff, #efefef);
-  }
   .btn-toolbar {
     padding: 0 10px;
   }
-  
 }
+.cal-header-days {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  height: 20px;
+  width: 100%;
+  font-size: 8px;
+  line-height: 20px;
+  @include linear-gradient(#fff, #efefef);
+}
+
 .cal-body {
   .cal-day {
     border-right: 1pt solid #ddd;
@@ -54,7 +59,7 @@ $cal_gap: 40px;
 }
 
 .hour {
-  height: $hour_height;
+  height: $week_hour_height;
 }
 .hour-label {
   border-top: 1pt solid transparent;
@@ -79,7 +84,8 @@ $cal_gap: 40px;
 
 .cal-month {
   .cal-day {
-
+    height: 100px;
+    border-bottom: 1pt solid #aaa;
   }
 }
 
@@ -89,7 +95,10 @@ $cal_gap: 40px;
   left: 0;
 }
 $cal_z: 10;
-.cal-event {
+.cal-month .cal-event {
+  overflow: hidden;
+}
+.cal-week .cal-event {
   position: absolute;
   left: 0;
   z-index: $cal_z;
