--- a/app/assets/javascripts/backbone/templates/calendar/calendar_week_header.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_week_header.jst.ejs
@@ -1,6 +1,6 @@
 <div class="cal-header">
   <div class="btn-toolbar">
-    <a href="/calendar/today/week" class="btn">Today</a>
+    <a href="#calendar/today/week" class="btn">Today</a>
     <div class="btn-group">
       <% month = moment(startDate).date(1).format(Gandalf.displayFormat) %>
       <% prevWeek = moment(startDate).subtract('w', 1).format(Gandalf.displayFormat) %>
