--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -34,7 +34,7 @@ td {
 
 .wrapper {
   //width: 100%;
-  min-width: 1000px;
+  min-width: $min_width;
 }
 
 /* ================== HEADER =============== */
