--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -49,7 +49,13 @@
   &:hover {
     background-color: #f5f5f5;
   }
-  @include transition(background-color 0.2s);
+  @include transition(all 0.5s);
+  &.event-hidden-org, &.event-hidden-cat {
+    height: 0;
+    padding: 0;
+    border: none;
+    overflow-y: hidden;
+  }
 }
 
 /* SIDEBAR */
