about to pull rafi

--- a/app/assets/javascripts/backbone/templates/organizations/edit.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/edit.jst.ejs
@@ -12,7 +12,7 @@
 </form>
 <div id="organization-events">
   <button id="new-event">New Event</button>
-  <div id='organization-events-list'></div>
+  <table id='organization-events-list'></table>
 </div>
 <form class="modal hide">
   <div class="modal-body">
