--- a/app/assets/javascripts/backbone/templates/events/feed_event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/feed_event.jst.ejs
@@ -1,4 +1,4 @@
-<div class="time"><%= startTime %> -<%= endTime %></div>
+<div class="time"><%= startTime %></div>
 <div class="details">
   <div class="feed-left"></div>
   <div class="organization"><%= event.get("organization") %></div>
