--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -42,6 +42,20 @@ td {
   padding: 0;
 }
 
+button {
+  display: inline-block;
+  border: 1px solid #777;
+  border-radius: 5px;
+  padding: 5px 20px;
+  font-size: 12px;
+  text-align: center;
+  @include linear-gradient(#fafafa, #eee);
+  cursor: pointer;
+  &:hover {
+    @include linear-gradient(#fafafa, #fafafa);
+  }
+}
+
 .wrapper {
   //width: 100%;
   min-width: 1000px;
