--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -1,8 +1,9 @@
 <div class="sidebar">
-  <div class="sidebar-label">Subscribed Organizations:</div>
-  <div id="subscribed-organizations-list"></div>
-  <div class="sidebar-label">Subscribed Categories:</div>
-  <div id="subscribed-categories-list"></div>
+  <div class="sidebar-header">Your Subscriptions</div>
+  <div class="sidebar-label">Organizations</div>
+  <div class="sidebar-list" id="subscribed-organizations-list"></div>
+  <div class="sidebar-label">Categories</div>
+  <div class="sidebar-list" id="subscribed-categories-list"></div>
 </div>
 <div class="feed" id="feed-list">
 </div>
