--- a/app/assets/javascripts/backbone/templates/organizations/short.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/short.jst.ejs
@@ -1,2 +1,2 @@
 <span><%= m.name %></span>
-<input type="checkbox" <% if(checked){ %> checked="checked" <% } %> />
+<input type="checkbox" <% if(!invisible){ %> checked="checked" <% } %> />
