--- a/app/assets/javascripts/backbone/templates/calendar/calendar_week_day.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_week_day.jst.ejs
@@ -1,4 +1,6 @@
 <div class="cal-events"></div>
 <% for(i=0; i<24;i++) { %>
-  <div class="hour hour-day"></div>
+  <div class="hour hour-day">
+    <div class="hour-half"></div>
+  </div>
 <% } %>
