--- a/app/assets/javascripts/backbone/templates/calendar/calendar_popover.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_popover.jst.ejs
@@ -1,4 +1,4 @@
-<div class='event-popover-head'>
+<div class='event-popover-head' style='background-color: <%= color %>;'>
   <strong><%= e.get("name") %></strong>
   <span class="close">×</span>
 </div>
