--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -119,7 +119,7 @@ $feed_width: 250px;
   top: 0;
   height:100%;
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 /* ============= ALL OTHER LAYOUT ============= */
