--- a/app/assets/javascripts/backbone/templates/calendar/calendar_popover.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_popover.jst.ejs
@@ -33,5 +33,5 @@
     </tr>
   </table>
   <p class="event-popover-description"><%= e.get("description") %></p>
-  <div id="map-canvas" style="width: 100%; height: 80px;"></div>
+  <div id="map-canvas"></div>
 </div>
