--- a/app/assets/javascripts/backbone/templates/calendar/calendar_month_header.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_month_header.jst.ejs
@@ -2,10 +2,14 @@
   <div class="btn-toolbar">
     <a href="#calendar/today/month" class="btn">Today</a>
     <div class="btn-group" style="margin-right: 30px;">
-      <% now = moment(startDate).format(Gandalf.displayFormat) %>
       <% thisMonth = moment(startDate).day(6).date(1) %>
       <% prevMonth = moment(thisMonth).subtract('M', 1).format(Gandalf.displayFormat) %>
       <% nextMonth = moment(thisMonth).add('M', 1).format(Gandalf.displayFormat) %>
+      <% if(moment().month() === thisMonth.month()) { %>
+        <% weekDate = "today" %>
+      <% } else { %>
+        <% weekDate = moment(startDate).format(Gandalf.displayFormat) %>
+      <% } %>
       <% headDisplayFormat = "MMMM YYYY" %>
       <a href=<%= "#calendar/"+prevMonth+"/month" %> class="btn">&lt;</a>
       <a href=<%= "#calendar/"+nextMonth+"/month" %> class="btn">&gt;</a>
@@ -14,7 +18,7 @@
       <%= thisMonth.format(headDisplayFormat) %>
     </span>
     <div class="btn-group pull-right">
-      <a href=<%= "#calendar/"+now+"/week" %> class="btn">Week</a>
+      <a href=<%= "#calendar/"+weekDate+"/week" %> class="btn">Week</a>
       <a class="btn disabled">Month</a>
     </div>
   </div>
