--- a/app/assets/javascripts/backbone/templates/calendar/calendar_week.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_week.jst.ejs
@@ -1,4 +1,5 @@
 <div class="cal-body">
+  <div class="cal-padding"></div>
   <table class="cal-body-table">
     <tr class="cal-day-container">
       <td>
@@ -13,4 +14,5 @@
       </td>
     </tr>
   </table>
+  <div class="cal-padding"></div>
 </div>
