--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -48,6 +48,7 @@ $feed_height: 90px;
   }
   .location, .organization {
     font-size: 13px;
+    font-weight: 200;
     // font-family: HNLight;
   }
   &:hover {
