--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -114,7 +114,7 @@ li {
 form {
   label {
     // font-family: HNLight;
-    font-weight: bold;
+    font-weight: 200;
   }
   input, textarea {
     border: 1px solid #dadada;
