new popover style

--- a/app/assets/javascripts/backbone/templates/calendar/calendar_month.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_month.jst.ejs
@@ -1,3 +1,4 @@
 <div class="cal-body">
-<table class="cal-body-table"></table>
+  <div class="cal-popover">hey</div>
+  <table class="cal-body-table"></table>
 </div>
