--- a/app/assets/javascripts/backbone/templates/calendar/calendar_week.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_week.jst.ejs
@@ -1,5 +1,5 @@
 <div class="cal-body">
-  <div class="cal-padding"></div>
+  <div class="cal-popover">hey</div>
   <div class="cal-multiday"></div>
   <table class="cal-body-table">
     <tr class="cal-day-container">
@@ -15,5 +15,4 @@
       </td>
     </tr>
   </table>
-  <div class="cal-padding"></div>
 </div>
