--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -32,7 +32,7 @@ $cal_top_pad: 10px;
   position: fixed;
   padding-top: $cal_top_pad;
   height: $cal_head_height;
-  z-index: 30;
+  z-index: 20;
   //width: 100%;
   width: -moz-calc(100% - 440px);
   width: -webkit-calc(100% - 440px);
@@ -53,11 +53,6 @@ $cal_top_pad: 10px;
   font-size: 8px;
   line-height: 20px;
   @include linear-gradient(#fff, #efefef);
-}
-
-.cal-padding {
-  height: 150px;
-  background-color: #eee;
 }
 
 .cal-multiday {
@@ -183,6 +178,11 @@ $test-color: lighten(#0f91ec, 20%);
 /* ======== POPOVER ========= */
 
 $event-popover-padding: 10px;
+
+.cal-popover {
+  position: absolute;
+  display: none;
+}
 
 .event-popover-head {
   font-size: 16px;
