--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -8,4 +8,5 @@
 <div class="feed" id="feed-list">
 </div>
 <div class="calendar" id="calendar-container">
+  <div class="cal-popover">hey</div>
 </div>
