cal month full day

--- a/app/assets/javascripts/backbone/templates/calendar/calendar_month_event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_month_event.jst.ejs
@@ -1,6 +1,8 @@
 <p>
   <span class="event-time">
-    <%= moment(event.get("start_at")).format("h:mm a") %>
+    <% if(!continued) { %>
+      <%= moment(event.get("start_at")).format("h:mm a") %>
+    <% } %>
   </span>
   <strong><%= event.get("name") %></strong>
 </p>
