--- a/app/assets/javascripts/backbone/templates/calendar/calendar_week_header.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/calendar_week_header.jst.ejs
@@ -24,10 +24,8 @@
       <td></td>
       <% formatString = "ddd - MM / DD"; %>
       <% for(i=0; i<7; i++) { %>
-        <td>
-          <div class="cal-day">
-            <%= moment(startDate).add('d', i).format(formatString) %>
-          </div>
+        <td class="cal-day">
+          <%= moment(startDate).add('d', i).format(formatString) %>
         </td>
       <% } %>
     </tr>
