--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -2,11 +2,11 @@
 
 .calendar {
   $width: $sidebar_width + $feed_width;
-  left: $width;
-  width: -moz-calc(100% - 440px);
-  width: -webkit-calc(100% - 440px);
-  width: -o-calc(100% - 440px);
-  width: calc(100% - 440px);
+  left: $width + 2; // For borders
+  width: -moz-calc(100% - 442px);
+  width: -webkit-calc(100% - 442px);
+  width: -o-calc(100% - 442px);
+  width: calc(100% - 442px);
   overflow-y: hidden;
 }
 
@@ -34,11 +34,11 @@ $cal_top_pad: 10px;
   height: $cal_head_height;
   z-index: 20;
   //width: 100%;
-  width: -moz-calc(100% - 440px);
-  width: -webkit-calc(100% - 440px);
-  width: -o-calc(100% - 440px);
-  width: calc(100% - 440px);
-  min-width: $min-width - 440px;
+  width: -moz-calc(100% - 442px);
+  width: -webkit-calc(100% - 442px);
+  width: -o-calc(100% - 442px);
+  width: calc(100% - 442px);
+  min-width: $min-width - 442px;
   background-color: white;
   @include box-shadow(0 5px 5px -5px #444);
   .btn-toolbar {
@@ -53,8 +53,8 @@ $cal_top_pad: 10px;
   font-size: 8px;
   line-height: 20px;
   @include linear-gradient(#fff, #efefef);
-  td:first-child {
-    border-left: 1pt solid transparent;
+  .cal-day:last-child {
+    border-right: 1pt solid transparent;
   }
 }
 
